--- a/Pj_Hotel/WebContent/viste/albergo/stanza.html
+++ b/Pj_Hotel/WebContent/viste/albergo/stanza.html
@@ -1,3 +1,1 @@
-<div class="stanza">
-	<div id="nomeStanza[numeroLista]">[nomeStanza]<input type="button" value="PRENOTA" onClick="prenota('GET',id.value)" /></div>
-</div>
+	<div>[nomeStanza]</div>
