--- a/Pj_Hotel/WebContent/viste/albergo/stanza.html
+++ b/Pj_Hotel/WebContent/viste/albergo/stanza.html
@@ -1,1 +1,6 @@
-	<div>[nomeStanza]</div>
+	<form method="GET" action="Pj_Hotel_v2">
+		<input type="hidden" name="comando" value="registrazione" />
+		<input type="hidden" value="[idStanza]" name="idStanza" />
+		<input type="hidden" value="[nomeStanza]" name="nomeStanza" />
+		<div>[nomeStanza]<input type="submit" value="PRENOTA"/></div>
+	</form>
