--- a/Pj_Hotel/WebContent/viste/menu.html
+++ b/Pj_Hotel/WebContent/viste/menu.html
@@ -61,7 +61,7 @@
 		&nbsp;
 	</td>
 	<td valign="top">
-		<h1>Hotel dell'uomo che ride - Venvenuti nel mondo del cyber-cervello</h1>
+		<h1>Hotel dell'uomo che ride - Benvenuti nel mondo del cyber-cervello</h1>
 	</td>
 </tr>
 </table>
